--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,62 +32,78 @@
     <div class="row">
       <div class="col-lg-8 mx-auto">
         <p class="lead text-muted mb-5">
-          <strong>Pellentesque habitant </strong> senectus et netus et malesuada
-          fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-          ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-          egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-          eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-          Vestibulum erat wisi, condimentum sed, <code>commodo vitae </code>,
-          ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt
-          condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
-          dui. <a href="#">Donec non enim </a> in turpis pulvinar facilisis. Ut
-          felis.
+          <strong>MedTelPlus cares</strong> about our clients and customers.
+          Whether you are recieving continued telecare services or have made a
+          one-time medical device purchase, MedTelPlus has your health and
+          peace-of-mind at the top of our priorities. In a world where many
+          services are a Google Search away, MedTelPlus knows how to exceed your
+          expectations, and leaves no question about who is number one in
+          Telecare and overall customer satisfaction.
+          <img src="" alt="" />
         </p>
-        <h2 class="mb-3">Header Level 2</h2>
+        <h2 class="mb-3">Our Promise To Customers</h2>
         <ol class="mb-5 text-left">
-          <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-          <li>Aliquam tincidunt mauris eu risus.</li>
+          <li>
+            Offer the best and most reliable Telecare services and products.
+          </li>
+          <li>
+            Leave every person who chooses MedTelPlus happy beyond their
+            expectations.
+          </li>
+          <li>
+            Continue to add and improve our Telecare services and products using
+            all provided feedback.
+          </li>
         </ol>
         <blockquote class="blockquote mb-5 text-left">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-          magna. Cras in mi at felis aliquet congue. Ut a est eget ligula
-          molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis
-          mollis, tellus est malesuada tellus, at luctus turpis elit sit amet
-          quam. Vivamus pretium ornare est.
+          IF you have any feedback for MedTelPlus, please send us a message
+          <span>
+            <button class="btn btn-outline-primary">
+              <i class="fa fa-envelope"></i>
+            </button>
+          </span>
         </blockquote>
-        <h3 class="mb-5">Header Level 3</h3>
+        <h3 class="mb-5">MedTelPlus Genesis</h3>
         <p class="mb-5">
-          Pellentesque habitant morbi tristique senectus et netus et malesuada
-          fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-          ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-          egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-          eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-          Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet,
-          wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum
-          rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in
-          turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus
-          faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.
-          Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor,
-          facilisis luctus, metus
+          As a new company, <strong class="text-primary">MedTelPlus</strong> has
+          had to work very hard on gaining the trust of our clients and
+          customers. We appreciate all of the wonderful people who choose
+          <strong class="text-primary">MedTelPlus</strong> services and
+          products. Our Founder and CEO,
+          <strong class="text-primary">Kevin Szkolnik</strong>, knows
+          first-hand, why having access to fast, quality healthcare is so
+          important. <br />
+          <br/>
+          While serving in the US Navy, Kevin learned that hard work, a
+          positive perspective, and the desire to give to those who need,
+          could help him find the answers to many of lifes problems.<br />
+          As a
+          <a href="https://www.dav.org/" target="_blank">Disabled Veteran</a>,
+          Kevin has seen his fair share of mediocre medical services,
+          under-trained, under-motivated medical staff, and people in dire need
+          of affordable healthcare (with an emphasis on the 'CARE'); So Kevin
+          took everything he had learned while serving his country and applied
+          it to his business-model when building MedTelPlus.
         </p>
+        <h3 class="mb-5">What Services MedTelPlus Offers</h3>
         <ul class="mb-4 text-left">
-          <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-          <li>Aliquam tincidunt mauris eu risus.</li>
+          <li>Medical Alert Devices</li>
+          <li>
+            TeleMedicine: Personalized access to Doctors and Healthcare
+            Proffesionals by phone and video
+          </li>
+          <li>CGX CancerScreening and Genetic Counseling</li>
+          <li>Superior quality and genuine empathy for all of our users</li>
         </ul>
-        <p><img src="assets/img/blog1.jpg" alt="..." class="img-fluid" /></p>
+        <!-- <p><img src="assets/img/blog1.jpg" alt="..." class="img-fluid" /></p> -->
         <p class="mt-5">
-          Pellentesque habitant morbi tristique senectus et netus et malesuada
-          fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-          ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-          egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-          eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-          Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet,
-          wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum
-          rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in
-          turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus
-          faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.
-          Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor,
-          facilisis luctus, metus
+          <strong class="text-primary">MedTelPlus</strong> and its devisions are
+          dedicated to providing reliable Healthcare services and products. Our
+          mission is to exceed all customer expectations while continuing to
+          grow. <strong class="text-primary">MedTelPlus</strong> is active in
+          our community, and continues to give back to show our appreciation for
+          all the support <strong class="text-primary">MedTelPlus</strong> has
+          recieved. Thanks to you all!
         </p>
       </div>
     </div>
