--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
   <app-navbar></app-navbar>
 </header>
 
-<div [@routeAnimation]="getAnimationData(routerOutlet)"></div>
-<router-outlet #routerOutlet="outlet"></router-outlet>
+<div [@routeAnimation]="getAnimationData(routerOutlet)" class="pt-4">
+  <router-outlet #routerOutlet="outlet"></router-outlet>
+</div>
 
 <app-footer class="pt-4"></app-footer>
 <!-- <button class="btn btn-back-to-top animate" data-aos="fade-right"></button> -->
