--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <!-- navbar-->
 <nav #nav class="navbar navbar-expand-md animate fadeInDown" data-aos="fixed-header" data-aos-offset="1200">
   <div class="container">
-    <a href="" class="navbar-brand">
+    <button style="width: auto;" class="btn-link btn navbar-brand pr-0 pl-0" (click)="navigateTo('/')">
       <img src="assets/images/logo_full.svg" width="120" style="" class="" alt="" />
-    </a>
+    </button>
     <div class="d-inline-flex">
       <div *ngIf="loggedIn | async" [hidden]="nav.clientWidth > 760">
           <div class="dropdown ml-2 d-inline-block">
@@ -138,12 +138,12 @@
           <div class="row">
             <div class="col-6" title="Google Login">
               <button class="btn btn-block btn-danger m-auto" (click)="googleLogin()">
-                <i class="fa fa-google">&nbsp; Google</i>
+                <i class="fa fa-google"></i>
               </button>
             </div>
             <div class="col-6" title="Facebook Login">
               <button class="btn btn-block btn-info m-auto">
-                <i class="fa fa-facebook">&nbsp; Facebook</i>
+                <i class="fa fa-facebook"></i>
               </button>
             </div>
           </div>
@@ -180,24 +180,38 @@
             <label>Password<sup class="text-primary">&#10033;</sup></label>
             <input #password type="password" name="password" placeholder="Password" class="form-control" />
           </div>
+          <div class="form-group mb-4">
+            <label>Confirm Password<sup class="text-primary">&#10033;</sup></label>
+            <input #password2 type="password" name="password2" placeholder="Re-enter Password" class="form-control" />
+          </div>
         </form>
         <div class="container m-auto">
-          <h5 class="lead text-center text-black-50 m-3">
-            One click Login with <br/>
-          </h5>
-            <button class="btn btn-danger ml-3" (click)="googleLogin()">
-               <i class="fa fa-google"></i> Google
-            </button>
-            <button class="btn btn-info ml-3">
-               <i class="fa fa-facebook"></i> Facebook
-            </button>
+          <div class="row">
+            <div class="col-12">
+              <h5 class="lead text-center text-black-50 m-3">
+                One click Login with <br/>
+              </h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6" title="Google Login">
+              <button class="btn btn-block btn-danger m-auto" (click)="googleLogin()">
+                <i class="fa fa-google"></i>
+              </button>
+            </div>
+            <div class="col-6" title="Facebook Login">
+              <button class="btn btn-block btn-info m-auto">
+                <i class="fa fa-facebook"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-link" (click)="modal.close('Close click')">
           Cancel
         </button>
-        <button type="button" class="btn btn-outline-primary"
+        <button [disabled]="password.value !== password2.value" type="button" class="btn btn-outline-primary"
           (click)="createAccount(name.value, email.value, password.value)">
           SignUp
         </button>
@@ -206,20 +220,4 @@
   </div>
 </ng-template>
 
-<!-- Loader -->
-<div class="loader-overlay" [hidden]="!(loading | async)">
-  <div class="loader">
-    <div class="loader-inner">
-      <div class="loading one"></div>
-    </div>
-    <div class="loader-inner">
-      <div class="loading two"></div>
-    </div>
-    <div class="loader-inner">
-      <div class="loading three"></div>
-    </div>
-    <div class="loader-inner">
-      <div class="loading four"></div>
-    </div>
-  </div>
-</div>
+<app-loader #loader></app-loader>
